--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
 					<div class="back_button" onclick='location.href=("http://127.0.0.1:8848/JS%E4%BD%9C%E4%B8%9A/%E8%88%AA%E6%B5%B7%E7%8E%8Bwiki/wiki.html")'></div>
 				</div>
 				<div class="right">
-					
+					<div></div>
 					
 					<div class="right_1">
 						<p id="right_1">立即加入Fandom</p>
